create github pages

--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,9 @@
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <meta name="description" content="All social media posts for SERIO Design FX in one place. You can follow us and all we publish on this page."/>
+  <meta name="description" content="All social media posts for SERIO Design FX in one place. You can follow us and all we publish on this 
+page."/>
+
 </head>
 <body>
 
@@ -112,7 +114,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">website creator download</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
+<section class="engine"><a href="https://mobirise.ws/j">design your own website</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
 
     
 
@@ -131,7 +133,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-1e" data-facebook="ckdavis58" data-twitter="ckdavis8817" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="373" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-1e" data-facebook="ckdavis58" data-twitter="ckdavis8817" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="396" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="">
     <div class="social-feed-container">
