--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
   
   <meta name="description" content="Web designed solutions using video,animations,bootstrap and AMP. You can have online presence with a solution provider.  Find out how video content ranks higher with Google here."/>
-<meta name="keywords" content="social media,online presence,video content,Milwaukee,web design,web solutions,Viddyoze"/>
+<meta name="keywords" content="milwaukee web designer, social media video,online presence,video content,milwaukee web design,web solutions milwaukee,Viddyoze"/>
 <meta name="p:domain_verify" content="e1290b39b3884beb88a76c95a623d0b8"/>
 <!--Start of Tawk.to Script-->
 <script type="text/javascript">
@@ -125,7 +125,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">how to build free website</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
+<section class="engine"><a href="https://mobirise.ws/b">best website creator</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
 
     
 
@@ -567,7 +567,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<div id="custom-html-2c" custom-code="true" data-rv-view="8"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
+<div id="custom-html-2c" custom-code="true" data-rv-view="73"><!-- Contact Form by Steve Riches - RichoSoft Squared - (C) 2016 - All Rights Reserved -->
 <!-- December 2016 - www.richosoft2.co.uk -->
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
     <section>
