--- a/ourstory.html
+++ b/ourstory.html
@@ -23,7 +23,7 @@
   
   
   <meta name="description" content="SERO Design FX a company with a long history providing solutions. We started in Information Technology in 1978 and helped implement UNIX and the internet. "/>
-<meta name="keywords" content="social media,online,presence,video content,Milwaukee,building,creating,service"/>
+<meta name="keywords" content="social media portfolio,online presence portfolio,video content portfolio,milwaukee  web designer portfolio,black web designer,afroamerican web designer,web solutions,Viddyoze"/>
 </head>
 <body>
 
@@ -110,7 +110,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/q">offline website builder download</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
+<section class="engine"><a href="https://mobirise.ws/f">easy site builder</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
