--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
   
   <meta name=”city” content=”Milwaukee”>
 <meta name="description" content="Web portfolio solutions using video,animations and music.  We provide solutions with web design and social media. Visit here to see the most advanced web designs"/>
-<meta name="keywords" content="social media,online presence,video content,Milwaukee,web design,web solutions,Viddyoze"/>
+<meta name="keywords" content="social media portfolio,online presence portfolio,video content portfolio,milwaukee  web designer portfolio,black web designer,afroamerican web designer,web solutions,Viddyoze"/>
 </head>
 <body>
 
@@ -111,7 +111,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy web builder</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
+<section class="engine"><a href="https://mobirise.ws/d">best web page software</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
 
     
 
@@ -331,7 +331,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <h1 class="mbr-fonts-style mbr-section-heading display-2">Get in touch</h1>
                 <div data-form-alert="" hidden="">Thanks watch for my phone call!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="sydGo3Y90bTEUUb++OWhEB8Zb6+bPUwSgRgIfmrM6cQhufpi/Kw0JdsUidSUVy8bqkjgLLYMFQ8XGRhvIRdsKRFAFS9Ji/Gh2rHwRID6vbhBsU5UyvFFsmBFVtGBeinj" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="JfuZ4jKGB3RV+o2WY2oxHMWq2XfyxDa/1lh1pswOYJh0bXQDBoypuLrOlJaHLH3c5qz+T0OH/edGLi9h6jiGDTlehM2SvWtDPDi2OxJqbNHfmcn39c/5E5n/hy0tNmPa" data-form-field="Email">
                     <div class="row input-main">
                         <div class="col-md-6 input-wrap" data-for="name">
                             <input type="text" class="field display-7" name="name" data-form-field="Name" placeholder="Name*" required="" id="name-form2-25">
