--- a/company.html
+++ b/company.html
@@ -24,7 +24,7 @@
   
   <title>SERIO Design FX  Company Mission and Strategic Vision</title>
 <meta name="Description" content="The mission is to be a leader in providing trusted excellence in a media conscience world.  The challenges of the social network can be met with a company that understands the impact of social media. The ability to interconnect online presence and web design. We provide the foundation and continued services for online presence.">
-<meta name="Keywords" content="web design,social media video,strategy,mission statement,milwaukee,immersive design">
+<meta name="Keywords" content="web design,web designer milwaukee,social media video,strategy,mission statement,milwaukee immersive design">
 
 
 </head>
@@ -113,7 +113,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">how to create own website</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
+<section class="engine"><a href="https://mobirise.ws/k">how to develop own website</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
 
     
 
