--- a/ourstory.html
+++ b/ourstory.html
@@ -102,15 +102,15 @@ s.parentNode.insertBefore(b, s);})();
                         
                         About Us
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10">About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15">Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6">Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26">Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7">Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables1-l">Pricing</a></div>
-                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="true" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
-                        &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogarticles.html#content5-1s" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="blog.html#content5-1d" aria-expanded="false">Blog</a></div></li></ul>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="#top" aria-expanded="false" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
+                        &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="blog.html#content5-1d" aria-expanded="false">Blog</a><a class="text-white dropdown-item display-4" href="blog.html#content5-1d" aria-expanded="false">Archive Blog</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
                 </a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/f">easy site builder</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
+<section class="engine"><a href="https://mobirise.ws/e">best website development software</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
