create github pages

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
+<section class="engine"><a href="https://mobirise.ws/k">develop your own website</a></section><section class="header7 cid-qvSK4HTIRN mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=NbYWF75rsmg" id="header7-3">
 
     
 
@@ -146,7 +146,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="media-content align-right">
                 <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2"><br><em>You can have</em><br><em>web design</em><br><em>solutions</em></h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-7"><em>Complete web design packages</em><br><em><a href="index.html#custom-html-3k">FREE Consultation!!!</a><br></em><br></p>
+                    <p class="mbr-text mbr-fonts-style display-7"><em>Be a part of the video movement</em><br>Complete web design packages<em><br></em><br><em><a href="index.html#custom-html-3k">FREE Consultation!!!</a><br></em><br></p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary-outline display-7" href="tel:+1-414-301-3159"><span class="socicon socicon-viber mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span><span style="font-size: 25.6px;"><br></span>&nbsp;Let's get started!</a></div>
             </div>
@@ -169,7 +169,7 @@ s.parentNode.insertBefore(b, s);})();
               <a href="http://metrosecurityserviceswi.com"><img src="assets/images/logolarge-1-507x538.jpg" alt="Metro Security Services Logo" title="Metro Security Services Wisconsin"></a>
             </div>
             <div class="media-content px-3 align-self-center mbr-white py-2">
-                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><span style="font-style: normal;">Metro Security Services of Wisconsin needed an entirely new website because the current web company didn't complete the site, they &nbsp;wanted more money for anything. We contracted SERIO Design FX  for a complete design. They created the website and complete Facebook video and social media. &nbsp;The online prescence was a bonus because no one offered that for FREE....</span></p>
+                    <p class="mbr-text testimonial-text mbr-fonts-style display-7"><span style="font-style: normal;"><a href="https://metrosecurityserviceswi.com" target="_blank" class="text-info">Metro Security Services of Wisconsin</a> needed an entirely new website because the current web company didn't complete the site, they &nbsp;wanted more money for anything. We contracted SERIO Design FX  for a complete design. They created the website and complete Facebook video and social media. &nbsp;The online prescence was a bonus because no one offered that for FREE....</span></p>
                     <p class="mbr-author-name pt-4 mb-2 mbr-fonts-style display-7">Melissa Washington</p>
                     <p class="mbr-author-desc mbr-fonts-style display-7">OWNER</p>
             </div>
@@ -187,7 +187,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Why The<br>Landing Page Is Important</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">How you can have a great web design<br> with video?</h1>
                 <div class="mbr-section-text mbr-white pb-3">
                     <p class="mbr-text mbr-fonts-style display-5"><em>Video gets it RIGHT!!!</em></p>
                 </div>
@@ -195,7 +195,7 @@ s.parentNode.insertBefore(b, s);})();
                         <a class="btn btn-md btn-white-outline display-4" href="portfolio.html#header2-26"><span class="mbri-video mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>PORTFOLIO</a></div>
             </div>
 
-            <div class="mbr-figure" style="width: 105%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/6POI_QxGgp0?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div class="mbr-figure" style="width: 75%;"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/6POI_QxGgp0?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
 
         </div>
     </div>
@@ -687,9 +687,6 @@ s.parentNode.insertBefore(b, s);})();
         </div>
     </div>
 </section>
-
-<div id="custom-html-3k" custom-code="true" data-rv-view="189"><!-- Type valid HTML here -->
-<img class="my-image" src="assets/images/code-editor-placeholder.jpg"></div>
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
