create github pages

--- a/company.html
+++ b/company.html
@@ -113,7 +113,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
+<section class="engine"><a href="https://mobirise.ws/c">best free website maker</a></section><section class="header7 cid-qCOP6PjyBA" data-bg-video="http://www.youtube.com/watch?v=uNCr7NdOJgw" id="header7-10">
 
     
 
@@ -124,9 +124,10 @@ s.parentNode.insertBefore(b, s);})();
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Provide Services To Businesses</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">Connect people, 
+<div>communities and business.</div></h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">Apply the wave of technology to meet the challenges of an ever changing <a href="index.html#header7-3">social network</a>.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">Challenges of an ever changing <a href="index.html#header7-3">social network</a>.</p>
                 </div>
                 
             </div>
@@ -147,9 +148,9 @@ s.parentNode.insertBefore(b, s);})();
         <div class="media-container-row">
 
             <div class="media-content align-right">
-                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-1">Mission</h1>
+                <h1 class="mbr-section-title mbr-white pb-3 mbr-fonts-style display-2">All In One Place</h1>
                 <div class="mbr-section-text mbr-white pb-3">
-                    <p class="mbr-text mbr-fonts-style display-5">&nbsp;To be a trusted provider of <a href="index.html#header7-3">products and services</a> that<br>connect&nbsp;people, <br>communities and business.</p>
+                    <p class="mbr-text mbr-fonts-style display-5">&nbsp;A &nbsp;trusted provider of <a href="index.html#header7-3">products and services</a> that<br>connect&nbsp;people, <br>communities and business.</p>
                 </div>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary-outline display-4" href="index.html#form4-a">CONTACT US</a></div>
             </div>
