create github pages

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/ckdlogoanimatedgif.gif" type="image/x-icon">
   <meta name="description" content="Serio Design Fx social media posts. You can look here for the latest developments in video social media. We maintain social channels on YouTube, Facebook,  LinkedIn and Instagram. Our clients are published in these channels giving them an immediate internet footprint. Our video media posts are picked up worldwide.">
-  <title>SERIO Design FX - Blog Social Media</title>
+  <title>SERIO Design FX - Blog Social Media| Facebook |YouTube|LinkedIn</title>
   <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
@@ -114,7 +114,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">free website maker app</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
+<section class="engine"><a href="https://mobirise.ws/g">create your own website</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
 
     
 
@@ -133,7 +133,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-1e" data-facebook="ckdavis58" data-twitter="ckdavis8817" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="523" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-1e" data-facebook="ckdavis58" data-twitter="ckdavis8817" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="277" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="">
     <div class="social-feed-container">
