--- a/privacy.html
+++ b/privacy.html
@@ -110,7 +110,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/o">free mobile website builder</a></section><section class="mbr-section content4 cid-qNlOpbTa33" id="content4-44">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section content4 cid-qNlOpbTa33" id="content4-44">
 
     
 
