--- a/privacy.html
+++ b/privacy.html
@@ -105,7 +105,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build free website</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
+<section class="engine"><a href="https://mobirise.ws/d">best web software</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
 
     
 
@@ -236,15 +236,11 @@ s.parentNode.insertBefore(b, s);})();
                         <a href="https://plus.google.com/u/0/+seriodesign" target="_blank">
                             <span class="mbr-iconfont mbr-iconfont-social socicon-googleplus socicon" style="color: rgb(255, 51, 102);"></span>
                         </a>
-                    </div><div class="soc-item">
-                        <a href="https://www.behance.net" target="_blank">
-                            <span class="mbr-iconfont mbr-iconfont-social socicon-behance socicon" style="color: rgb(255, 255, 255);"></span>
-                        </a>
                     </div></div>
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
