--- a/ourstory.html
+++ b/ourstory.html
@@ -106,13 +106,13 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/a">best free site builder</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
+<section class="engine"><a href="https://mobirise.ws/j">how to design your own website</a></section><section class="header11 cid-qCZym1KUuQ mbr-fullscreen mbr-parallax-background" id="header11-15">
 
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
 
-    <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(0, 0, 0);">
+    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);">
     </div>
     <div class="container align-left">
         <div class="media-container-column mbr-white col-md-12">
@@ -205,7 +205,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
