--- a/socialmedia.html
+++ b/socialmedia.html
@@ -110,7 +110,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best web site maker</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
+<section class="engine"><a href="https://mobirise.ws/k">develop free website</a></section><section class="mbr-section content5 cid-qDhb8wlDgZ mbr-parallax-background" id="content5-1d">
 
     
 
@@ -129,7 +129,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-social-feed loading" id="feed-1e" data-facebook="ckdavis58" data-twitter="ckdavis8817" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="682" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-social-feed loading" id="feed-1e" data-facebook="ckdavis58" data-twitter="ckdavis8817" data-google="+CharlesKDavis" data-posts="8" data-youtube="UCrkwLLp3vRrF_HrQ_YlY6_Q" data-rv-view="680" style="background-color: rgb(135, 154, 159); padding-top: 0px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="">
     <div class="social-feed-container">
@@ -191,7 +191,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
