--- a/theoneserviceyouneed.html
+++ b/theoneserviceyouneed.html
@@ -114,7 +114,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section content5 cid-qJRfD9oIsx mbr-parallax-background" id="content5-2z">
+<section class="engine"><a href="https://mobirise.ws/e">best website development software</a></section><section class="mbr-section content5 cid-qJRfD9oIsx mbr-parallax-background" id="content5-2z">
 
     
 
@@ -141,7 +141,7 @@ s.parentNode.insertBefore(b, s);})();
         <div class="inner-container" style="width: 100%;">
             <hr class="line" style="width: 25%;">
             <div class="section-text align-center mbr-fonts-style display-5">
-                    When the internet went public business struggled with all the options. They decided to go with a <a href="index.html#header7-3">single source solution provider</a>.</div>
+                    When the internet went public business struggled with all the options. They decided to go with a <a href="index.html#header7-3" class="text-black">single source solution provider</a>.</div>
             <hr class="line" style="width: 25%;">
         </div>
         </div>
@@ -245,7 +245,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-37" data-rv-view="523" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 1.5rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-37" data-rv-view="521" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 1.5rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
@@ -311,7 +311,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
