--- a/blogarticles.html
+++ b/blogarticles.html
@@ -109,7 +109,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="mbr-section content5 cid-qGAgfBsP55 mbr-parallax-background" id="content5-1s">
+<section class="engine"><a href="https://mobirise.ws/j">design free website</a></section><section class="mbr-section content5 cid-qGAgfBsP55 mbr-parallax-background" id="content5-1s">
 
     
 
@@ -274,7 +274,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
