--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/c">best free website maker</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
+<section class="engine"><a href="https://mobirise.ws/q">offline website maker download</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
 
     
 
@@ -127,7 +127,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="mbr-white col-md-12">
                 <h1 class="mbr-section-title mbr-white mbr-bold mbr-fonts-style display-1"></h1>
                 <div class="typed-text pb-3 display-1">
-                    <span class="mbr-section-subtitle mbr-fonts-style mbr-white display-1"><a href="index.html">Web Design</a> &nbsp; &nbsp; &nbsp; &nbsp;Solutions!!!<br></span>
+                    <span class="mbr-section-subtitle mbr-fonts-style mbr-white display-1"><a href="index.html" class="text-white">Web Design</a> &nbsp; &nbsp; &nbsp; &nbsp;Solutions!!!<br></span>
                     
                 </div>
                 <p class="mbr-section-text mbr-fonts-style display-5">SPECIALIZED IN &nbsp;DESIGNING WEB SOLUTIONS</p>
@@ -197,12 +197,12 @@ s.parentNode.insertBefore(b, s);})();
 
     <div class="container">
         <div class="media-container-row">
-            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><font color="#232323"><strong>So if you need a solution for...</strong></font><br><div><strong>- Effective web design using video and &nbsp;animations.</strong></div><div><strong>- Video social media for awareness and                         engagement.</strong></div><div><strong>- Social media management based on your 
+            <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7"><p><font color="#232323"><strong><br></strong></font></p><p><font color="#232323"><strong>So if you need a solution for...</strong></font><br></p><div><strong>- Effective web design using video and &nbsp;animations.</strong></div><div><strong>- Video social media for awareness and                         engagement.</strong></div><div><strong>- Social media management based on your 
 </strong></div><div><strong>&nbsp; &nbsp;customer and brand.</strong></div><div><strong><br></strong></div><div><strong>&nbsp;</strong><span style="font-size: 1rem;">All you have to do is send me an email using the "<strong>CONTACT US</strong>" on this page.
 </span><br></div><div><strong>
 </strong></div><div><span style="font-size: 1rem;"><strong>Free</strong> consultations, welcomed.
 </span></div><div><strong>
-</strong></div><div><strong>What is YOUR problem? What do YOU want done about it?</strong></div><div><strong>  How I can help? &nbsp;Trust me, I can help.</strong></div><div><strong><br></strong></div></div>
+</strong></div><div><strong>What is YOUR problem? What do YOU want done about it?</strong></div><div><strong>  How I can help? &nbsp;Trust me, I can help.</strong></div><div><strong><br></strong></div><p></p></div>
         </div>
     </div>
 </section>
@@ -346,7 +346,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <h1 class="mbr-fonts-style mbr-section-heading display-2">Get in touch</h1>
                 <div data-form-alert="" hidden="">Thanks watch for my phone call!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DBrjZH4xRSttdoVALHB2EACIKIc0TClyg8NhsqEPEGwV6Pcd12Rgfl1xjKjvBs/CidUzR5DO9JIKq2BiDCNDoXneQFEJGiNcPILS1Lme4BkRXWCzLRW0dSmA4ZOVp+Ma" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="4bS3o9AalEU9QxkLDaJk6xj2UeCMM2QBZaePjwaWXjoZXkg7g23Bq7D6zT7QnXbkaSdGgHMTFnBwUk2Z/LDV7/IP3RpZqmJxIWN+IKj2OI/DOti4EU1xjaCc4HlFKx3S" data-form-field="Email">
                     <div class="row input-main">
                         <div class="col-md-6 input-wrap" data-for="name">
                             <input type="text" class="field display-7" name="name" data-form-field="Name" placeholder="Name*" required="" id="name-form2-25">
@@ -428,7 +428,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
