--- a/privacy.html
+++ b/privacy.html
@@ -105,7 +105,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop website maker</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
 
     
 
@@ -240,7 +240,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
