--- a/trustwebdesign.html
+++ b/trustwebdesign.html
@@ -116,7 +116,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/j">how to design own website</a></section><section class="mbr-section content5 cid-qKr1IsDyae mbr-parallax-background" id="content5-3n">
+<section class="engine"><a href="https://mobirise.ws/f">easy web creator</a></section><section class="mbr-section content5 cid-qKr1IsDyae mbr-parallax-background" id="content5-3n">
 
     
 
@@ -269,7 +269,7 @@ s.parentNode.insertBefore(b, s);})();
     </div>
 </section>
 
-<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3u" data-rv-view="619" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-section mbr-section__comments" id="facebook-comments-block-3u" data-rv-view="617" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
          
     <div class="mbr-section__container mbr-section__container--isolated addons-container">
         <div class="addons-row">
@@ -335,7 +335,7 @@ s.parentNode.insertBefore(b, s);})();
             </div>
             <div class="row row-copirayt">
                 <p class="mbr-text mb-0 mbr-fonts-style mbr-white display-7">
-                    © Copyright 2018<a href="https://blog.seriodesignfx.com">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
+                    © Copyright 2018<a href="https://blog.seriodesignfx.com" class="text-info">&nbsp;SERIO Design FX</a> &nbsp;- All Rights Reserved
                 </p>
             </div>
         </div>
