create github pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -107,7 +107,7 @@ s.parentNode.insertBefore(b, s);})();
                         
                         About Us
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10">About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15">Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6">Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26">Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7">Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47">Pricing</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
                         &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false">Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false">Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false">YouTube</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
                 </a></div>
@@ -115,7 +115,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/k">develop free website</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
+<section class="engine"><a href="https://mobirise.ws/g">how to create own website</a></section><section class="header2 cid-qHjJM68c3l mbr-fullscreen" data-bg-video="https://www.youtube.com/watch?v=l8UXhtqV6hU" id="header2-26">
 
     
 
@@ -346,7 +346,7 @@ s.parentNode.insertBefore(b, s);})();
             <div class="form-1 col-md-8 col-sm-12" data-form-type="formoid">
                 <h1 class="mbr-fonts-style mbr-section-heading display-2">Get in touch</h1>
                 <div data-form-alert="" hidden="">Thanks watch for my phone call!</div>
-                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="6La3e5ySKlzRvd2Onjl4XPjikYY9HEOJerA1GrIQIykorpyaMsvlXT6qI/QX4j9Qh8OXLvaseHkgP3HL8NqBO0MItlpXMkN/44kKumFftjTtgTg5hW4jH1jsMpbvEXKx" data-form-field="Email">
+                <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UWm6d7nvyqOS4ug8TzfJY+4/NrqdCdAMzJj363hTaRDS4BU1zzqBmzO8O08TkZRluQrqUJYaxe7yHbi9rmXGWAssUbFhSR+GK7VZL1DU4p6I0LY0W45Sl+mcg2++svKB" data-form-field="Email">
                     <div class="row input-main">
                         <div class="col-md-6 input-wrap" data-for="name">
                             <input type="text" class="field display-7" name="name" data-form-field="Name" placeholder="Name*" required="" id="name-form2-25">
