--- a/privacy.html
+++ b/privacy.html
@@ -97,7 +97,7 @@ s.parentNode.insertBefore(b, s);})();
                         
                         About Us
                     </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="company.html#header7-10">About</a><a class="text-white dropdown-item display-4" href="ourstory.html#header11-15">Our Story</a><a class="text-white dropdown-item display-4" href="index.html#gallery2-6">Products</a><a class="text-white dropdown-item display-4" href="portfolio.html#header2-26">Portfolio</a><a class="text-white dropdown-item display-4" href="index.html#testimonials4-7">Testimonials</a><a class="text-white dropdown-item display-4" href="index.html#pricing-tables2-47">Pricing</a></div>
-                </li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="false" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
+                </li><li class="nav-item dropdown open"><a class="nav-link link text-white dropdown-toggle display-4" href="https://blog.seriodesignfx.com" aria-expanded="true" data-toggle="dropdown-submenu"><span class="fa fa-feed mbr-iconfont mbr-iconfont-btn"></span>
                         &nbsp;Blog &nbsp;</a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="blogvideo.html" aria-expanded="false">Articles</a><a class="text-white dropdown-item display-4" href="https://blog.seriodesignfx.com" aria-expanded="false">Blog</a><a class="text-white dropdown-item display-4" href="socialmedia.html#content5-1d" aria-expanded="false">Social Media</a><a class="text-white dropdown-item display-4" href="seriodesigngfxyoutube.html#content5-4f" aria-expanded="false">YouTube</a></div></li></ul>
             <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="index.html#custom-html-2c"><span class="mbri-letter mbr-iconfont mbr-iconfont-btn"></span>Contact Us!
                 </a></div>
@@ -105,7 +105,7 @@ s.parentNode.insertBefore(b, s);})();
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/n">mobile website maker app</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
+<section class="engine"><a href="https://mobirise.ws/n">free website builder app</a></section><section class="mbr-section content5 cid-qPjZdnN2lp mbr-parallax-background" id="content5-4c">
 
     
 
